Top divs perfected

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -7,7 +7,7 @@ body {
   font-family: Times;
   color:blue; 
   font-weight: bolder;
-  font-size: 4vw;
+  font-size: 5vw;
 }
 div{
 	padding:0% 5%;
@@ -34,24 +34,28 @@ div{
 	color: blue
 }
 #splash {
-  background-image: url("img/Cutlery.png");
+  background: white url("img/Cutlery.png");
   background-attachment: fixed;
-  background-position: center;
+  background-position: 5.5vw;
   background-repeat: no-repeat;
-  background-size: cover;
-  line-height: 6vw;
-  padding: 4vw;
-  margin-left:5vw;
-  width: 77vw;
-  height: 55vw;
+  background-size: 85%;
+  padding: 4vw 4vw 30vw 4vw;
+  /*margin-left:5vw;*/
+  /*width: 77vw;*/
+  background-origin: content-box;
+}
+#splash p{
+  margin: 1% 5%;
 }
 a {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   color:black; 
   font-weight: normal;
-  font-size: 2vw;
-  padding: 2vw 2.5vw;
+  font-size: 1.5vw;
+  padding: 1.5vw 2vw;
+  margin-left: 5%;
+  margin-bottom: 50vw;
 }
 </style>
 </head>
@@ -60,7 +64,7 @@ a {
 <!-- The Y'i'our Kitchen typo is present in the images and video so I included it -->
 <!-- Normally I'd make each section it's own div or p, but since it was specified that it's non-functioning I thought spaces would be fine -->
 <div id='menu_bar'><span id='active'>Home</span><span>Decor</span><span>Yiour Kitchen</span><span>Your Bathroom</span><span>Your Bedroom</span><span>About</span><span>Contact</span></div>
-<div id='splash'><span>Fall Cutlery<br>Collection</span><br><a>Shop Now</a></div>
-<div id='header'></div>
+<div id='splash'><p>Fall Cutlery</p><p>Collection</p><br><a>Shop Now</a></div>
+<div id='style_table'></div>
 </body>
 </html>
