better blue borders

--- a/hw2/index.html
+++ b/hw2/index.html
@@ -80,7 +80,7 @@ a {
 	margin-bottom: 17%;
 }
 .cell img {
-	border-right: lightblue solid 25px;
+	border-right: lightblue solid 2vw;
 	width: 95%;
 }
 </style>
