--- a/hw3/index.html
+++ b/hw3/index.html
@@ -3,32 +3,27 @@
 <head>
 <style type="text/css">
 body {
-  /*I use % and viewport units instead of pixels because we were told anything css native is fair game,
-  but since we were discouraged from making it responsive I was a little confused so I included
-  matching pixel values for some attributes to show that I could do it that way as well*/
-  height: 150vh;
-  /*height: 2500px;*/
+  height: 2500px;
   font-family: Times;
   color:blue; 
   font-weight: bolder;
-  font-size: 5vw;
-  /*font-size: 50pt;*/
+  font-size: 55pt;
 }
 div{
-	padding:0% 5%;
+	padding:0px 100px;
 }
 #header{
-	padding:2% 5%;
-  	font-weight: bold;
-  	font-size: 3vw;
+	padding:35px 75px;
+  font-weight: bold;
+  font-size: 30pt;
 	border-bottom: 3px solid lightgrey;
 }
 #menu_bar {
   font-family: Arial, Helvetica, sans-serif;
   color:black; 
   font-weight: bold;
-  font-size: 1vw;
-  padding: 2% 0% 3.5% 5%;
+  font-size: 10pt;
+  padding: 30px 0 40px 75px;
 
 }
 #menu_bar span{
@@ -41,47 +36,48 @@ div{
 #splash {
   background: white url("https://csci571.com/hw/hw3/images/Cutlery.png");
   background-attachment: fixed;
-  background-position: 5.5vw 0px;
+  background-position: 75px 0px;
   background-repeat: no-repeat;
-  background-size: 85%;
-  padding: 4vw 4vw 25vw 4vw;
+  background-size: 1300px;
+  padding: 50px 50px 375px 50px;
   background-origin: content-box;
 }
 #splash p{
-  margin: 1% 5%;
+  margin: 20px 60px;
+  width: 1600px;
 }
 a {
   background-color: white;
   font-family: Arial, Helvetica, sans-serif;
   color:black; 
   font-weight: normal;
-  font-size: 1.5vw;
-  padding: 1.5vw 2vw;
-  margin-left: 5%;
-  margin-bottom: 50vw;
+  font-size: 16pt;
+  padding: 30px 40px;
+  margin-left: 70px;
 }
 #style_header {
 	text-align: center;
-	font-size: 3vw;
-	margin: 4vh 0 3vh 0;
+	font-size: 35pt;
+	margin:  64px 0 48px 0;
 }
 #style_table {
 	text-align: center;
-	font-size: 1.75vw;
-	padding: 0 0 0 4vw;
+	font-size: 28px;
+	padding: 0 0 0 60px;
+  width: 1600px;
 }
 .cell {
-	width:45%;
-	padding: 0 1.5%;
+	/*width:45%;*/
+	padding: 0 15px;
 	float: left;
 }
 .cell p {
-	margin-top: 8%;
-	margin-bottom: 17%;
+	margin-top: 20px;
+	margin-bottom: 35px;
 }
 .cell img {
-	border-right: lightblue solid 2vw;
-	width: 95%;
+	border-right: lightblue solid 15px;
+	width: 600px;
 }
 </style>
 </head>
