--- a/hw3/index.html
+++ b/hw3/index.html
@@ -3,17 +3,17 @@
 <head>
 <style type="text/css">
 body {
-  height: 2500px;
   font-family: Times;
   color:blue; 
   font-weight: bolder;
-  font-size: 55pt;
+  font-size: 40pt;
+  line-height: 36pt;
 }
 div{
 	padding:0px 100px;
 }
 #header{
-	padding:35px 75px;
+	padding:30px 60px;
   font-weight: bold;
   font-size: 30pt;
 	border-bottom: 3px solid lightgrey;
@@ -22,13 +22,13 @@ div{
   font-family: Arial, Helvetica, sans-serif;
   color:black; 
   font-weight: bold;
-  font-size: 10pt;
-  padding: 30px 0 40px 75px;
+  font-size: 8pt;
+  padding: 5px 0 25px 60px;
 
 }
 #menu_bar span{
   display: inline;
-  margin-right: 25px;
+  margin-right: 20px;
 }
 #active {
 	color: blue
@@ -36,10 +36,10 @@ div{
 #splash {
   background: white url("https://csci571.com/hw/hw3/images/Cutlery.png");
   background-attachment: fixed;
-  background-position: 75px 0px;
+  background-position: 65px 0px;
   background-repeat: no-repeat;
-  background-size: 1300px;
-  padding: 50px 50px 375px 50px;
+  background-size: 850px;
+  padding: 30px 50px 200px 50px;
   background-origin: content-box;
 }
 #splash p{
@@ -51,20 +51,21 @@ a {
   font-family: Arial, Helvetica, sans-serif;
   color:black; 
   font-weight: normal;
-  font-size: 16pt;
-  padding: 30px 40px;
-  margin-left: 70px;
+  font-size: 12pt;
+  padding: 16px 20px;
+  margin-left: 65px;
 }
 #style_header {
-	text-align: center;
-	font-size: 35pt;
-	margin:  64px 0 48px 0;
+	text-align: left;
+  font-size: 24pt;
+	margin:  44px 0 34px 0;
+  padding-left: 320px;
 }
 #style_table {
 	text-align: center;
-	font-size: 28px;
+	font-size: 12pt;
 	padding: 0 0 0 60px;
-  width: 1600px;
+  width: 920px;
 }
 .cell {
 	/*width:45%;*/
@@ -77,7 +78,7 @@ a {
 }
 .cell img {
 	border-right: lightblue solid 15px;
-	width: 600px;
+	width: 410px;
 }
 </style>
 </head>
