added cors header and fixed front end request

--- a/hw6/index.html
+++ b/hw6/index.html
@@ -95,7 +95,7 @@ th{
   <div id='splash'>
     <h1>Stock Search</h1>
     <div id='search_bar'>Enter Stock Ticker Symbol <span>*</span><input type="text" name=""></div>
-    <div id='search_buttons'><button onclick='requestStockData(this)'>Search</button><button>Clear</button></div>
+    <div id='search_buttons'><button onclick='requestStockData()'>Search</button><button>Clear</button></div>
   </div>
   <div class='seperator'></div>
 
