--- a/Ug5WzQTPB1.html
+++ b/Ug5WzQTPB1.html
@@ -24,7 +24,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #5</td>
-    <td><a href="./hw6">Link to Homework #6</a></td>
+    <td><a href="https://csci-gcp-stocks.wn.r.appspot.com/">Link to Homework #6</a></td>
+    <td><a href="https://csci-gcp-stocks.wn.r.appspot.com/stonks?stnk=aapl">Link to Homework #6 APIs</a></td>
   </tr>
   <tr>
     <td>Link to Homework #7</td>
