--- a/Ug5WzQTPB1.html
+++ b/Ug5WzQTPB1.html
@@ -29,7 +29,8 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #7</td>
-    <td><a href="https://csci571.com/hw/hw2/ScrambleThisName.html">Link to Homework #8</a></td>
+    <td><a href="https://angular-app-294801.wn.r.appspot.com/">Link to Homework #8</a></td>
+    <td><a href="https://angular-stocks.wn.r.appspot.com/api/details/aapl">Link to Homework #8 API Example</a></td>
   </tr>
   <tr>
     <td>Link to Homework #9</td>
