added link to different hw9 api

--- a/Ug5WzQTPB1.html
+++ b/Ug5WzQTPB1.html
@@ -34,6 +34,7 @@ th, td {
   </tr>
   <tr>
     <td>Link to Homework #9</td>
+    <td><a href="https://20201105t190024-dot-angular-stocks.wn.r.appspot.com/api/details/aapl">Link to Homework #9 API</a></td>
     <td>Link to Homework #10</td>
   </tr>
   </tbody></table>
